Continued structuring and started routing a bit

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "method-override": "^2.3.9",
     "mongoose": "^4.11.12",
     "morgan": "^1.8.2",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "request": "^2.82.0"
   }
 }
