--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/iamnapo/CallByMeaning#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chalk": "^2.1.0",
     "express": "^4.15.4",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.12",
