--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "chalk": "^2.1.0",
     "express": "^4.15.4",
+    "mathjs": "^3.16.3",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.12",
     "morgan": "^1.8.2",
