--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Diploma Thesis",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/iamnapo/CallByMeaning.git"
   },
-  "author": "Napoleon-Christos Oikonomou",
+  "author": {
+    "name": "Napoleon-Christos Oikonomou",
+    "email": "napoleonoikon@gmail.com"
+  },
   "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/iamnapo/CallByMeaning/issues"
@@ -24,7 +28,7 @@
     "mathjs": "^3.16.3",
     "mongoose": "^4.11.12",
     "morgan": "^1.8.2",
-    "pug": "^2.0.0-rc.4",
     "request": "^2.82.0"
-  }
+  },
+  "private": true
 }
