--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "body-parser": "^1.18.2",
     "chalk": "^2.1.0",
     "dotenv": "^4.0.0",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "mathjs": "^3.16.4",
-    "mongoose": "^4.12.1",
+    "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "wordpos": "^1.1.5"
   },
   "private": true,
   "devDependencies": {
