--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "private": true,
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "shelljs": "^0.7.8"
   }
 }
