--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+app/dev/seedDB.js
 
 # Typescript v1 declaration files
 typings/
