--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "express": "^4.16.2",
     "mathjs": "^3.16.5",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.2",
+    "mongoose": "^4.13.3",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "request": "^2.83.0",
     "wordpos": "^1.1.5"
   },
