--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^4.13.4",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "natural": "^0.5.4",
     "request": "^2.83.0",
     "wordpos": "^1.1.5"
   },
