--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Diploma Thesis",
   "main": "app/index.js",
   "scripts": {
-    "start": "nodemon app/index.js -i library/",
+    "start": "node app/index.js",
     "test": "mocha",
-    "initDB": "node app/dev/initDB.js",
-    "heroku-prebuild": "npm install nodemon -g"
+    "initDB": "node app/dev/initDB.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +28,7 @@
     "express": "^4.16.2",
     "mathjs": "^3.17.0",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.4",
+    "mongoose": "^4.13.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "natural": "^0.5.4",
