--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mathjs": "^3.17.0",
-    "mongodb": "^2.2.33",
+    "mongodb": "^3.0.0-rc0",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
