--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ typings/
 # Optional eslint cache
 .eslintcache
 
+# Optional eslint ignore
+.eslintignore
+
 # Optional REPL history
 .node_repl_history
 
@@ -57,9 +60,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
-# Notes file
-notes.txt
-
-# Folder specific ESLint ignore
-.eslintignore
