--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
+  },
+  "engines": {
+    "node": "^9.2.0",
+    "npm": "^5.6.0"
   }
 }
